# codegraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  TODO.md  codegraph.db.codegraph-meta.json  deny.toml  future-ideas.md  journal.md  refactoring.md
.github/workflows/: ci.yml
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/src/: lib.rs  time.rs
crates/codegraph-core/tests/: cypher_intro.rs  explain_probe.rs  merge_semantics.rs  velr_roundtrip.rs
crates/codegraph-indexer/: Cargo.toml
crates/codegraph-indexer/src/: api_spec.rs  arch.rs  bdd_steps.rs  gherkin.rs  lib.rs  lsp.rs  lsp_index.rs  main.rs  markdown_index.rs  meta.rs  projects.rs
crates/codegraph-mcp/: Cargo.toml
crates/codegraph-mcp/src/: arch_overlay.rs  concepts.rs  coverage.rs  dead_code.rs  diff.rs  explore.rs  find.rs  graph_export.rs  history.rs  impact.rs  main.rs  notes.rs  pr_nodes.rs  pr_notes.rs  render.rs  report.rs  tests.rs  tx.rs  util.rs  views.rs  watch.rs  watch_tools.rs  worklog.rs
docs/: NEXT.md  ROADMAP.md  WORKLOG.md  arch.html  mcp-tools.md  schema.md  velr-notes.md
docs/velr-bugs/: 0001-unanchored-delete-skips-rows.md
examples/: README.md
examples/claude-skill/: codegraph.md
examples/demo-go/: README.md  go.mod  main.go
examples/demo-go/docs/: overview.md
examples/demo-go/greet/: greet.go  greet_test.go
examples/demo-go/mathops/: mathops.go  mathops_test.go
examples/demo-python/: README.md  pyproject.toml
examples/demo-python/docs/: overview.md
examples/demo-python/src/demoapp/: __init__.py  greet.py  math_ops.py
examples/demo-python/tests/: test_greet.py  test_math.py
examples/demo-rust/: Cargo.toml
examples/demo-rust/docs/: overview.md
examples/demo-rust/src/: lib.rs
examples/demo-rust/tests/features/: greet.feature
examples/demo-typescript/: README.md  package.json  tsconfig.json
examples/demo-typescript/docs/: overview.md
examples/demo-typescript/src/: greet.ts  index.ts  math.ts
examples/demo-typescript/tests/: greet.test.ts  math.test.ts
