[workspace]
resolver = "2"
members = [
    "crates/codegraph-core",
    "crates/codegraph-indexer",
    "crates/codegraph-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codegraph/codegraph"
rust-version = "1.75"

[workspace.dependencies]
velr        = "0.2.9"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
uuid        = { version = "1", features = ["v4"] }
walkdir     = "2"
toml        = "0.8"
regex       = "1"
syn         = { version = "2", features = ["full", "visit"] }
quote       = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
lsp-types   = "0.97"
pulldown-cmark = { version = "0.12", default-features = false }
anyhow      = "1"
thiserror   = "1"
