[package]
name = "codegraph-core"
description = "Shared velr adapter, query helpers, and Cypher value escaping for the codegraph toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
velr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
