[package]
name = "codegraph-core"
description = "Shared velr adapter, query helpers, and Cypher value escaping for the codegraph toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/codegraph-core"
keywords = ["graph", "cypher", "velr", "embedded", "database"]
categories = ["database", "data-structures"]

[dependencies]
velr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
