[package]
name = "codegraph-indexer"
description = "Indexes codebases (Rust via syn/LSP, Markdown, Gherkin/BDD, OpenAPI) into a velr graph database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/codegraph-indexer"
keywords = ["code-analysis", "lsp", "graph", "indexing", "cypher"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "codegraph-indexer"
path = "src/main.rs"

[[bin]]
name = "bdd-viz"
path = "src/bin/bdd_viz.rs"

[dependencies]
codegraph-core = { path = "../codegraph-core" }
velr        = { workspace = true }
syn         = { workspace = true }
quote       = { workspace = true }
proc-macro2 = { workspace = true }
walkdir     = { workspace = true }
toml        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
lsp-types   = { workspace = true }
regex       = { workspace = true }
pulldown-cmark = { workspace = true }
uuid        = { workspace = true }
anyhow      = { workspace = true }
