[package]
name = "codegraph-mcp"
description = "MCP server exposing a velr-backed codegraph database as Claude tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/codegraph-mcp"
keywords = ["mcp", "claude", "graph", "cypher", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codegraph-mcp"
path = "src/main.rs"

[dependencies]
codegraph-core = { path = "../codegraph-core" }
velr        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
anyhow      = { workspace = true }
