[project]
name = "demoapp"
version = "0.1.0"
description = "Tiny demo project for codegraph-indexer (Python flavour)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demoapp"]
